# JWT-Srp-Auth-GateWay

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  design.md  docker-compose.yml  init-db.sql
.sisyphus/: boulder.json
.sisyphus/notepads/captcha-registration/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: captcha-registration.md
config/: default.toml
docs/: auth-integration.md
docs/app/: cn_Zh_README.md
docs/web/: cn_Zh_README.md
migrations/: 001_init.sql  002_admin_and_proxy_config.sql  003_simplify_proxy_routes.sql  004_system_config.sql  005_docker_upstream.sql  006_add_strip_prefix.sql  007_add_indexes.sql  008_verification_code_attempts.sql  009_api_keys.sql  010_srp.sql  011_fix_srp_session_columns.sql  012_srp_session_add_salt_email.sql  013_user_is_active.sql  014_captchas.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: middleware.rs  mod.rs
src/api/handlers/: admin.rs  admin_auth.rs  api_key.rs  api_key_auth.rs  captcha.rs  external.rs  login.rs  mod.rs  password_reset.rs  proxy_config.rs  refresh.rs  register.rs  srp_login.rs  stats.rs  system_config.rs  verify.rs
src/db/: mod.rs
src/gateway/: config_cache.rs  jwt.rs  mod.rs  proxy.rs
src/models/: mod.rs
src/services/: admin.rs  api_key.rs  captcha.rs  email.rs  mod.rs  proxy_config.rs  srp.rs  srp_test.rs  system_config.rs  token.rs  user.rs
web/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
web/src/components/: LanguageToggle.tsx  Layout.tsx  ProtectedRoute.tsx
web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
web/src/context/: AuthContext.tsx
web/src/i18n/: config.ts
web/src/i18n/locales/: en.json  zh.json
web/src/lib/: api.ts  srp.ts
web/src/pages/: ApiKeys.tsx  AuthTest.tsx  Dashboard.tsx  Login.tsx  ProxyConfig.tsx  Users.tsx
