[package]
name = "arc_auth"
version = "0.1.0"
edition = "2024"
description = "High-performance authentication gateway with JWT and reverse proxy"
authors = ["ARC Team"]

[dependencies]
# Gateway
pingora = { version = "0.7.0", features = ["proxy"] }
pingora-proxy = "0.7.0"
http = "1.4.0"

# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Auth
jsonwebtoken = "10.3.0"
argon2 = "0.5"
num-bigint = "0.4"

# Email
mail-builder = "0.4"
mail-send = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.15"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# Utils
async-trait = "0.1"
rand = "0.9"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
